Begin working app
