# pv116.rozetka.com/app/Http/Controllers/AuthController.php
@@ -1,8 +1,11 @@
 <?php
 namespace App\Http\Controllers;
 
+use App\Models\User;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Validator;
+use Intervention\Image\Drivers\Gd\Driver;
+use Intervention\Image\ImageManager;
 use Symfony\Component\HttpFoundation\Response;
 
 class AuthController extends Controller
@@ -67,5 +70,82 @@ class AuthController extends Controller
             return response()->json(['error'=>'Дані вказано не вірно'], Response::HTTP_UNAUTHORIZED);
         }
         return response()->json(['token'=>$token], Response::HTTP_OK);
+    }
+
+    /**
+     * @OA\Post(
+     *     tags={"Auth"},
+     *     path="/api/register",
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 required={"email", "lastName", "name", "phone", "image", "password", "password_confirmation"},
+     *                 @OA\Property(
+     *                     property="image",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="email",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="lastName",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="phone",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password_confirmation",
+     *                     type="string"
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(response="200", description="Add Category.")
+     * )
+     */
+    public function register(Request $request) {
+
+        $validation = Validator::make($request->all(),[
+            'name'=> 'required|string',
+            'lastName'=> 'required|string',
+            'image'=> 'required|string',
+            'phone'=> 'required|string',
+            'email'=> 'required|email',
+            'password'=> 'required|string|min:6',
+        ]);
+
+        if($validation->fails()) {
+            return response()->json($validation->errors(), Response::HTTP_BAD_REQUEST);
+        }
+
+        $input = $request->all();
+        $imageName = uniqid().".webp";
+        $sizes = [50,150,300,600,1200];
+        // create image manager with desired driver
+        $manager = new ImageManager(new Driver());
+        foreach ($sizes as $size) {
+            $fileSave = $size."_".$imageName;
+            $imageRead = $manager->read($input["image"]);
+            $imageRead->scale(width: $size);
+            $path=public_path('upload/'.$fileSave);
+            $imageRead->toWebp()->save($path);
+        }
+        $user = User::create(array_merge(
+            $validation->validated(),
+            ['password' => bcrypt($request->password), 'image'=> $imageName]
+        ));
+        return response()->json(['token'=>$user], Response::HTTP_OK);
     }
 }
